--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -2,14 +2,18 @@
 {% block content %}
 
 <form id="login-form" action="/auth/login" method="post">
-    <div class="form-row">
-        <div class="form-group col-md-6">
-            <label for="email">Email</label>
-            <input type="text" id="email" class="form-control" name="email">
+    <div class="container">
+        <div class="form-row">
+            <div class="form-group col-sm">
+                <label for="email">Email</label>
+                <input type="text" id="email" class="form-control" name="email">
+            </div>
         </div>
-        <div class="form-group col-md-6">
-            <label for="password">Password</label>
-            <input type="password" id="password" class = "form-control" name="password">
+        <div class="form-row">
+            <div class="form-group col-sm">
+                <label for="password">Password</label>
+                <input type="password" id="password" class = "form-control" name="password">
+            </div>
         </div>
     </div>
     <button type="submit" class="btn btn-success" >Log in</button>
