--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -2,16 +2,21 @@
 {% block content %}
 
 <form id="login-form" action="/auth/register" method="post">
-    <div class="form-row">
-        <div class="form-group col-md-6">
-            <label for="email">Email</label>
-            <input type="text" id="email" class="form-control" name="email">
+    <div class="container">
+        <div class="form-row">
+            <div class="form-group col-sm-3">
+                <label for="email">Email</label>
+                <input type="text" id="email" class="form-control" name="email">
+            </div>
+        </div>   
+        <div class=form-row">
+            <div class="form-group col-sm-3">
+                <label for="password">Password</label>
+                <input type="password" id="password" class = "form-control" name="password">
+            </div>
         </div>
-        <div class="form-group col-md-6">
-            <label for="password">Password</label>
-            <input type="password" id="password" class = "form-control" name="password">
-        </div>
+
+        <button type="submit" class="btn btn-success" >Sign up</button>
     </div>
-    <button type="submit" class="btn btn-success" >Sign up</button>
 </form>
 {% endblock %}
