--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -3,6 +3,6 @@
     <h1>Hello {{ email }}</h1>
     <hr>
         <h2>What would you like to do?</h2>
-        <a href="/blogs/new"><button type="submit" class="btn btn-primary" >New Blog</button></a>
-        <a href="/blogs"><button type="submit" class="btn btn-primary" >Read Blogs</button></a>
+        <a href="/blogs/new"><button type="submit" class="btn btn-success" >New Blog</button></a>
+        <a href="/blogs"><button type="submit" class="btn btn-success" >Read Blogs</button></a>
 {% endblock %}
