--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -8,8 +8,8 @@
                 <label for="email">Email</label>
                 <input type="text" id="email" class="form-control" name="email">
             </div>
-        </div>   
-        <div class=form-row">
+        </div>
+        <div class="form-row">
             <div class="form-group col-sm-3">
                 <label for="password">Password</label>
                 <input type="password" id="password" class = "form-control" name="password">
