--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -3,13 +3,22 @@
 
 <div class="media">
     <img src='/static/images/IMG_9971.jpg' class="img-responsive" alt="Image not Avail">
-    <div class="media-body">
-      <h5 class="mt-0">Everything Horse.com</h5>
-      <h6>This website enables you to manage everything related horses and running a barn.  Sign up or login in MoFo!!</h6>
-      <a href="/login"><button type="submit" class="btn btn-success" >Log in</button></a>
-      <a href="/register"><button type="submit" class="btn btn-success" >Register</button></a>
-    </div>
+    <div class="container">
+        <div class ="row">
+            <div class="column">
+                <h5 class="mt-0">Everything Horse.com</h5>
+            </div>
+        </div>
+        <div class ="row">
+            <div class ="column">
+                <h6>This website enables you to manage everything related horses and running a barn.  Sign up or login in MoFo!!</h6>
+            </div>
+        </div>
 
+        <a href="/login"><button type="submit" class="btn btn-success" >Log in</button></a>
+        <a href="/register"><button type="submit" class="btn btn-success" >Register</button></a>
+    </div>
 </div>
+
 
 {% endblock %}
