added password encription

--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -17,7 +17,7 @@
         </div>
 
     <button type="submit" class="btn btn-success" >Log in</button>
-    <a href="/"></a><button type="submit" class="btn btn-primary" >Home</button></a>
+    <a href="/"><button type="submit" class="btn btn-primary" >Home</button></a>
     </div>
 </form>
 {% endblock %}
