--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -17,6 +17,7 @@
         </div>
 
         <button type="submit" class="btn btn-success" >Sign up</button>
+        <a href="/"><button type="submit" class="btn btn-success" >Home</button></a>
     </div>
 </form>
 {% endblock %}
