trying to test pw

--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -3,6 +3,7 @@
     <h1>Hello {{ email }}</h1>
     <hr>
         <h2>What would you like to do?</h2>
+        <h3> {{ user1pw }}</h3>
         <a href="/blogs/new"><button type="submit" class="btn btn-success" >New Blog</button></a>
         <a href="/blogs"><button type="submit" class="btn btn-success" >Read Blogs</button></a>
 {% endblock %}
