added nascar page

--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -7,5 +7,6 @@
         <a href="/blogs/new"><button type="submit" class="btn btn-success" >New Blog</button></a>
         <a href="/blogs"><button type="submit" class="btn btn-success" >Read Blogs</button></a>
         <a href="/"><button type="submit" class="btn btn-success" >Home</button></a>
+        <a href="/nascar"><button type="submit" class="btn btn-success" >Nascar</button></a>
 
 {% endblock %}
