--- a/src/templates/nascar_home.html
+++ b/src/templates/nascar_home.html
@@ -4,7 +4,7 @@
 
     <div class="container">
         <div class="media">
-            <img src='/static/images/IMG_0677.jpg' class="img-responsive" alt="Image not Avail">
+            <img src='/static/images/IMG_0677.jpg' class="img-fluid" alt="Responsive image">
         </div>
         <div class ="row">
             <div class="column">
