added menu options to nascar_admin.html

--- a/src/templates/nascar_admin.html
+++ b/src/templates/nascar_admin.html
@@ -5,12 +5,15 @@
     <div class="container">
         <div class="form-row">
             <div class="input-group">
-                <select class="custom-select" id="inputGroupSelect04" aria-label="Example select with button addon">
+                <select name="admin-select" class="custom-select" id="inputGroupSelect04" aria-label="Example select with button addon">
                     <option selected>Choose...</option>
-                    <option value="1">Load Races</option>
-                    <option value="2">Load Drivers</option>
-                    <option value="3">Load Tracks</option>
-                    <option value="4">Load Results</option>
+                    <option value="1">Drivers</option>
+                    <option value="2">Tracks</option>
+                    <option value="3">Schedule</option>
+                    <option value="4">Playoff</option>
+                    <option value="5">Entry List</option>
+                    <option value="6">Practice</option>
+                    <option value="7">Qualifying</option>
                 </select>
                 <div class="input-group-append">
                     <button class="btn btn-outline-secondary" type="button">Load</button>
