--- a/src/templates/nascar_admin.html
+++ b/src/templates/nascar_admin.html
@@ -7,22 +7,32 @@
             <div class="input-group">
                 <select name="admin-select" class="custom-select" id="inputGroupSelect04" aria-label="Example select with button addon">
                     <option selected>Choose...</option>
-                    <option value="1">Drivers</option>
-                    <option value="2">Tracks</option>
-                    <option value="3">Schedule</option>
-                    <option value="4">Playoff</option>
-                    <option value="5">Entry List</option>
-                    <option value="6">Practice</option>
-                    <option value="7">Qualifying</option>
+                    <option value="Drivers">Drivers</option>
+                    <option value="Tracks">Tracks</option>
+                    <option value="Schedule">Schedule</option>
+                    <option value="Playoff">Playoff</option>
+                    <option value="Entry_list">Entry List</option>
+                    <option value="Practice">Practice</option>
+                    <option value="Qualifying">Qualifying</option>
                 </select>
                 <div class="input-group-append">
                     <button class="btn btn-outline-secondary" type="button">Load</button>
                 </div>
             </div>
         </div>
-
-
-     <a href="/"><button type="submit" class="btn btn-primary" >Home</button></a>
+        <div class="form-row">
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Year
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                    <button class="dropdown-item" type="button">2020</button>
+                    <button class="dropdown-item" type="button">2019</button>
+                    <button class="dropdown-item" type="button">2018</button>
+                </div>
+            </div>
+        </div>
     </div>
 </form>
+<a href="/"><button type="submit" class="btn btn-primary" >Home</button></a>
 {% endblock %}
