temp changes for debugging

--- a/src/templates/races_list.html
+++ b/src/templates/races_list.html
@@ -1,9 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="'container">
-    <h2>Races loaded</h2>
-      {% for race in races %}
-      <li>{{ race }}</li>
-      {% endfor %}
+    <h2>{{ data }}</h2>
+
 </div>
 {% endblock %}
