changed nascar\load in app.py

--- a/src/templates/races_list.html
+++ b/src/templates/races_list.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="'container">
     <h2>Races List</h2>
-    {% for race in races %}
+    {% for race in race_list %}
     <li>{{ race }}</li>
     {% endfor %}
 
