changed nascar\load in app.py

--- a/src/templates/races_list.html
+++ b/src/templates/races_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="'container">
-    <h2>Races List</h2>
+    <h2>{{ data  }}</h2>
     {% for race in race_list %}
     <li>{{ race }}</li>
     {% endfor %}
