--- a/src/templates/races_list.html
+++ b/src/templates/races_list.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="'container">
-    <h2>{{ data  }}</h2>
-
+    <h2>Race List</h2>
+    {% for race in races %}
+    <li>{{ race }}</li>
+    {% endfor %}
 
 </div>
 {% endblock %}
