changed nascar\load in app.py

--- a/src/templates/races_list.html
+++ b/src/templates/races_list.html
@@ -3,7 +3,7 @@
 <div class="'container">
     <h2>Race List</h2>
     {% for race in races %}
-    <li>{{ race }}</li>
+    <li>{{ race.race_name }}</li>
     {% endfor %}
 
 </div>
