--- a/src/templates/races_list.html
+++ b/src/templates/races_list.html
@@ -3,9 +3,8 @@
 <div class="'container">
     <h2>Race List</h2>
     {% for race in races %}
-        <h3>{{ race.race_name }}</h3>
+        <p>{{ race.race_name }}</p>
         <hr>
     {% endfor %}
-
 </div>
 {% endblock %}
