--- a/src/templates/races_list.html
+++ b/src/templates/races_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="'container">
-    <h2{{ text }}</h2>
+    <h2>{{ text }}</h2>
     {% for race in races %}
         <p>{{ race.race_name }}</p>
         <hr>
