changed nascar\load in app.py

--- a/src/templates/races_list.html
+++ b/src/templates/races_list.html
@@ -3,7 +3,7 @@
 <div class="'container">
     <h2>{{ text }}</h2>
     {% for race in races %}
-        <p>{{ race.race_name }}</p>
+        <p>{{ race }}</p>
         <hr>
     {% endfor %}
 </div>
