troubleshooting passing data to race_list.html

--- a/src/templates/races_list.html
+++ b/src/templates/races_list.html
@@ -2,9 +2,9 @@
 {% block content %}
 <div class="'container">
     <h2>{{ text }}</h2>
-    {% for race in races %}
-        <p>{{ race["race_name"] }}</p>
+
+        <p>{{ races }}</p>
         <hr>
-    {% endfor %}
+
 </div>
 {% endblock %}
