troubleshooting passing data to race_list.html

--- a/src/templates/races_list.html
+++ b/src/templates/races_list.html
@@ -3,7 +3,7 @@
 <div class="'container">
     <h2>{{ text }}</h2>
 
-        <p>{{ races }}</p>
+        <p>{{ races['race_name'] }}</p>
         <hr>
 
 </div>
