troubleshooting passing data to race_list.html

--- a/src/templates/races_list.html
+++ b/src/templates/races_list.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="'container">
     <h2>{{ text }}</h2>
-
+    {% for race in races %}
         <p>{{ races['race_name'] }}</p>
         <hr>
 
