Added table to race_list.html

--- a/src/templates/races_list.html
+++ b/src/templates/races_list.html
@@ -2,13 +2,13 @@
 {% block content %}
 <div class="container">
     <h2>{{ text }}</h2>
-    <table class=""table>
+    <table class="table">
         <thead>
             <tr>
-                <th scope"col">Race Name</th>
-                <th scope"col">Track</th>
-                <th scope"col">Date</th>
-                <th scope"col">Status</th>
+                <th scope="col">Race Name</th>
+                <th scope="col">Track</th>
+                <th scope="col">Date</th>
+                <th scope="col">Status</th>
             </tr>
         </thead>
         <tbody>
