Change formating of table

--- a/src/templates/races_list.html
+++ b/src/templates/races_list.html
@@ -2,8 +2,8 @@
 {% block content %}
 <div class="container">
     <h2>{{ text }}</h2>
-    <table class="table">
-        <thead>
+    <table class="table table-striped">
+        <thead class="thead-light">
             <tr>
                 <th scope="col">Race Name</th>
                 <th scope="col">Track</th>
