Added functionality to check if data is already loaded

--- a/src/templates/races_list.html
+++ b/src/templates/races_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container">
-    <h2>{{ text }}</h2>
+    <h2>Races Loaded</h2>
     <table class="table table-striped">
         <thead class="thead-light">
             <tr>
@@ -13,7 +13,30 @@
             </tr>
         </thead>
         <tbody>
-        {% for race in races %}
+        {% for race in races_loaded %}
+            <tr>
+                <td>{{ race['race_name'] }}</td>
+                <td>{{ race['series'] }}</td>
+                <td>{{ race['track'] }}</td>
+                <td>{{ race['race_start'] }}</td>
+                <td>{{ race['race_status'] }}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    <h2>Races Ignored (ie already loaded)</h2>
+    </table>
+    <table class="table table-striped">
+        <thead class="thead-light">
+            <tr>
+                <th scope="col">Race Name</th>
+                <th scope="col">Series</th>
+                <th scope="col">Track</th>
+                <th scope="col">Date</th>
+                <th scope="col">Status</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for race in races_ignored %}
             <tr>
                 <td>{{ race['race_name'] }}</td>
                 <td>{{ race['series'] }}</td>
