Added functionality to check if data is already loaded

--- a/src/templates/races_list.html
+++ b/src/templates/races_list.html
@@ -13,7 +13,7 @@
             </tr>
         </thead>
         <tbody>
-        {% for race in races_loaded %}
+        {% for race in races %}
             <tr>
                 <td>{{ race['race_name'] }}</td>
                 <td>{{ race['series'] }}</td>
