--- a/src/templates/races_list.html
+++ b/src/templates/races_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container">
-    <h2>{{ load_list[0] }}</h2>
+    <h2>{{ load_list }}</h2>
     <table class="table table-striped">
         <thead class="thead-light">
             <tr>
