--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -12,7 +12,7 @@
 <div class="container">
    <h1>Test jQuery Area</h1>
    <div class="form-check">
-        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" >
         <label class="form-check-label" for="exampleRadios1">
         Load Race Events
         </label>
@@ -24,7 +24,7 @@
         </label>
     </div>
     <div class="form-check">
-        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3" disabled>
+        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3" >
         <label class="form-check-label" for="exampleRadios3">
         Load Qualifying Results
         </label>
