--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -34,8 +34,14 @@
 $(document).ready(function() {
     $(':radio').click(function() {
     var checkedValue = $('input[name="exampleRadios"]:checked').val()
-    if (checkedValue == "option1")
+    if (checkedValue == "option1") {
     alert ("Option 1 was choosen")
+    } else if  {(checkedValue == "option2") {
+    alert ("Option 2 was choosen")
+    } else if (checkedValue == "option3") {
+    alert ("Option 3 was choosen")
+    } else {
+    alert ("Nothing was chosen which shouldnt happen")
 }); //end radio
 }); //end ready
 </script>
