--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -36,7 +36,7 @@ $(document).ready(function() {
     var checkedValue = $('input[name="exampleRadios"]:checked').val()
     if (checkedValue == "option1") {
     alert ("Option 1 was choosen")
-    } else if  {(checkedValue == "option2") {
+    } else if (checkedValue == "option2") {
     alert ("Option 2 was choosen")
     } else if (checkedValue == "option3") {
     alert ("Option 3 was choosen")
