testing jquery on profile page

--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -38,10 +38,11 @@ $(document).ready(function() {
     alert ("Option 1 was choosen")
     } else if (checkedValue == "option2") {
     alert ("Option 2 was choosen")
-    } //else if (checkedValue == "option3") {
-    //alert ("Option 3 was choosen")
-    //} else {
-    //alert ("Nothing was chosen which shouldnt happen")
+    } else if (checkedValue == "option3") {
+    alert ("Option 3 was choosen")
+    } else {
+    alert ("Nothing was chosen which shouldnt happen")
+    }
 }); //end radio
 }); //end ready
 </script>
