--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -29,13 +29,31 @@
         Load Qualifying Results
         </label>
     </div>
+    <form id="loadRaces" action="/nascar/load" method="post">
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label for="title">Type of data to load</label>
+                <input type="text" id="type" class="form-control" name="type">
+            </div>
+            <div class="form-group col-md-6">
+                <label for="description">Year</label>
+                <input type="text" id="year" class = "form-control" name="year">
+            </div>
+            <div class="form-group col-md-6">
+                <label for="description">Series</label>
+                <input type="text" id="series" class = "form-control" name="series">
+            </div>
+        </div>
+        <button type="submit" class="btn btn-success" >Load Data</button>
+    </form>
 </div>
 <script>
 $(document).ready(function() {
+$("#loadRaces").hide();
     $(':radio').click(function() {
     var checkedValue = $('input[name="exampleRadios"]:checked').val()
     if (checkedValue == "option1") {
-    alert ("Option 1 was choosen")
+    $(#loadRaces").show();
     } else if (checkedValue == "option2") {
     alert ("Option 2 was choosen")
     } else if (checkedValue == "option3") {
