testing jquery on profile page

--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -49,11 +49,11 @@
 </div>
 <script>
 $(document).ready(function() {
-$("#loadRaces").hide();
+$('#loadRaces').hide();
     $(':radio').click(function() {
     var checkedValue = $('input[name="exampleRadios"]:checked').val()
     if (checkedValue == "option1") {
-    $(#loadRaces").show();
+    $('#loadRaces').show();
     } else if (checkedValue == "option2") {
     alert ("Option 2 was choosen")
     } else if (checkedValue == "option3") {
