testing jquery on profile page

--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -55,8 +55,10 @@ $('#loadRaces').hide();
     if (checkedValue == "option1") {
     $('#loadRaces').show();
     } else if (checkedValue == "option2") {
+    $('#loadRaces').hide();
     alert ("Option 2 was choosen")
     } else if (checkedValue == "option3") {
+    $('#loadRaces').hide();
     alert ("Option 3 was choosen")
     } else {
     alert ("Nothing was chosen which shouldnt happen")
