--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -32,8 +32,8 @@
     <form id="loadRaces" action="/nascar/load" method="post">
         <div class="form-row">
             <div class="form-group col-md-6">
-                <label for="title">Type of data to load</label>
-                <input type="text" id="type" class="form-control" name="type">
+                <label for="description">Type Parameter</label>
+                <input type="text" id="type" class="form-control" name="type" value="races" readonly>
             </div>
             <div class="form-group col-md-6">
                 <label for="description">Year</label>
@@ -42,6 +42,10 @@
             <div class="form-group col-md-6">
                 <label for="description">Series</label>
                 <input type="text" id="series" class = "form-control" name="series">
+            </div>
+            <div class="form-group col-md-6">
+                <label for="description">Series</label>
+                <input type="text" id="file" class = "form-control" name="series" value="schedule.json" readonly>
             </div>
         </div>
         <button type="submit" class="btn btn-success" >Load Data</button>
@@ -63,7 +67,7 @@ $('#loadRaces').hide();
     } else {
     alert ("Nothing was chosen which shouldnt happen")
     }
-}); //end radio
+}); //end radio\
 }); //end ready
 </script>
 {% endblock %}
