testing jquery on profile page

--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -83,7 +83,7 @@
             </div>
             <div class="form-group col-md-6">
                 <label for="description">Series (sc = CUP, xf = Xfinity, go = Truck)</label>
-                <input type="text" id="seriesQual" class = "form-control" name="series">
+                <input type="text" id="seriesQual" class = "form-control" name="series" value="sc">
             </div>
             <div class="form-group col-md-6">
                 <label for="description">File</label>
@@ -112,7 +112,7 @@ $('#loadQualify').hide();
     $('#loadRaces').hide();
     $('#loadEntrants').hide();
     $('#loadQualify').show();
-   
+
     } else {
     alert ("Nothing was chosen which shouldnt happen")
     }
