--- a/src/templates/nascar_admin.html
+++ b/src/templates/nascar_admin.html
@@ -1,22 +1,113 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container">
-    <form id="new-blog" action="/nascar/load" method="post">
+   <h1>Sport Radar Data Loads</h1>
+   <div class="form-check">
+        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="Races" >
+        <label class="form-check-label" for="exampleRadios1">
+        Load Race Events
+        </label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="Entrants">
+        <label class="form-check-label" for="exampleRadios2">
+        Load Drivers Entered for a Race
+        </label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="Qualify" >
+        <label class="form-check-label" for="exampleRadios3">
+        Load Qualifying Results
+        </label>
+    </div>
+    <form id="loadRaces" action="/nascar/load" method="post">
         <div class="form-row">
             <div class="form-group col-md-6">
-                <label for="title">Type of data to load</label>
-                <input type="text" id="type" class="form-control" name="type">
+                <label for="description">Type Parameter</label>
+                <input type="text" id="typeRace" class="form-control" name="type" value="races" readonly>
             </div>
             <div class="form-group col-md-6">
                 <label for="description">Year</label>
-                <input type="text" id="year" class = "form-control" name="year">
+                <input type="text" id="yearRace" class = "form-control" name="year" value="2020">
             </div>
             <div class="form-group col-md-6">
-                <label for="description">Series</label>
-                <input type="text" id="series" class = "form-control" name="series">
+                <label for="description">Series (sc = CUP, xf = Xfinity, go = Truck)</label>
+                <input type="text" id="seriesRace" class = "form-control" name="series" value="sc">
+            </div>
+            <div class="form-group col-md-6">
+                <label for="description">File</label>
+                <input type="text" id="fileRace" class = "form-control" name="series" value="schedule.json" readonly>
+            </div>
+        </div>
+        <button type="submit" class="btn btn-success" >Load Data</button>
+    </form>
+    <form id="loadEntrants" action="/nascar/load" method="post">
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label for="description">Type Parameter</label>
+                <input type="text" id="typeOther" class="form-control" name="type" value="races" readonly>
+            </div>
+            <div class="form-group col-md-6">
+                <label for="description">Year</label>
+                <input type="text" id="yearOther" class = "form-control" name="year" value="2020">
+            </div>
+            <div class="form-group col-md-6">
+                <label for="description">Series (sc = CUP, xf = Xfinity, go = Truck)</label>
+                <input type="text" id="seriesOther" class = "form-control" name="series" value="sc">
+            </div>
+            <div class="form-group col-md-6">
+                <label for="description">File</label>
+                <input type="text" id="fileOther" class = "form-control" name="series" value="entry_list.json" readonly>
+            </div>
+        </div>
+        <button type="submit" class="btn btn-success" >Load Data</button>
+    </form>
+    <form id="loadQualify" action="/nascar/load" method="post">
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label for="description">Type Parameter</label>
+                <input type="text" id="typeQual" class="form-control" name="type" value="races" readonly>
+            </div>
+            <div class="form-group col-md-6">
+                <label for="description">Race ID</label>
+                <input type="text" id="yearQual" class = "form-control" name="race_ID">
+            </div>
+            <div class="form-group col-md-6">
+                <label for="description">Series (sc = CUP, xf = Xfinity, go = Truck)</label>
+                <input type="text" id="seriesQual" class = "form-control" name="series" value="sc">
+            </div>
+            <div class="form-group col-md-6">
+                <label for="description">File</label>
+                <input type="text" id="fileQual" class = "form-control" name="series" value="qualifying.json" readonly>
             </div>
         </div>
         <button type="submit" class="btn btn-success" >Load Data</button>
     </form>
 </div>
+<script>
+$(document).ready(function() {
+$('#loadRaces').hide();
+$('#loadEntrants').hide();
+$('#loadQualify').hide();
+    $(':radio').click(function() {
+    var checkedValue = $('input[name="exampleRadios"]:checked').val()
+    if (checkedValue == "Races") {
+    $('#loadRaces').show();
+    $('#loadEntrants').hide();
+    $('#loadQualify').hide();
+    } else if (checkedValue == "Entrants") {
+    $('#loadRaces').hide();
+    $('#loadEntrants').show();
+    $('#loadQualify').hide();
+    } else if (checkedValue == "Qualify") {
+    $('#loadRaces').hide();
+    $('#loadEntrants').hide();
+    $('#loadQualify').show();
+
+    } else {
+    alert ("Nothing was chosen which shouldnt happen")
+    }
+}); //end radio\
+}); //end ready
+</script>
 {% endblock %}
