--- a/src/templates/nascar_admin.html
+++ b/src/templates/nascar_admin.html
@@ -36,7 +36,7 @@
             </div>
             <div class="form-group col-md-6">
                 <label for="description">File</label>
-                <input type="text" id="fileRace" class = "form-control" name="series" value="schedule.json" readonly>
+                <input type="text" id="fileRace" class = "form-control" name="file" value="schedule.json" readonly>
             </div>
         </div>
         <button type="submit" class="btn btn-success" >Load Data</button>
@@ -57,7 +57,7 @@
             </div>
             <div class="form-group col-md-6">
                 <label for="description">File</label>
-                <input type="text" id="fileOther" class = "form-control" name="series" value="entry_list.json" readonly>
+                <input type="text" id="fileOther" class = "form-control" name="file" value="entry_list.json" readonly>
             </div>
         </div>
         <button type="submit" class="btn btn-success" >Load Data</button>
@@ -78,7 +78,7 @@
             </div>
             <div class="form-group col-md-6">
                 <label for="description">File</label>
-                <input type="text" id="fileQual" class = "form-control" name="series" value="qualifying.json" readonly>
+                <input type="text" id="fileQual" class = "form-control" name="file" value="qualifying.json" readonly>
             </div>
         </div>
         <button type="submit" class="btn btn-success" >Load Data</button>
