--- a/src/templates/nascar_admin.html
+++ b/src/templates/nascar_admin.html
@@ -43,7 +43,7 @@
     </form>
     <form id="loadEntrants" action="/nascar/load" method="post">
         <div class="form-row">
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-6" id="entrants_type">
                 <label for="description">Type Parameter</label>
                 <input type="text" id="typeEntrantOther" class="form-control" name="type" value="races" readonly>
             </div>
@@ -51,11 +51,11 @@
                 <label for="description">Race_ID</label>
                 <input type="text" id="race_IDEntrant" class = "form-control" name="race_ID" value="2020">
             </div>
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-6" id="entrant_series">
                 <label for="description">Series (sc = CUP, xf = Xfinity, go = Truck)</label>
                 <input type="text" id="seriesEntrant" class = "form-control" name="series" value="sc">
             </div>
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-6" id="entrant_file">
                 <label for="description">File</label>
                 <input type="text" id="fileEntrant" class = "form-control" name="file" value="entry_list.json" readonly>
             </div>
@@ -64,19 +64,19 @@
     </form>
     <form id="loadQualify" action="/nascar/load" method="post">
         <div class="form-row">
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-6" id="qual_type">
                 <label for="description">Type Parameter</label>
                 <input type="text" id="typeQual" class="form-control" name="type" value="races" readonly>
             </div>
-            <div class="form-group col-md-6" id="Qual_race_id">
+            <div class="form-group col-md-6" id="qual_race_id">
                 <label for="description">Race ID</label>
                 <input type="text" id="race_IDQual" class = "form-control" name="race_ID">
             </div>
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-6" id="qual_series">
                 <label for="description">Series (sc = CUP, xf = Xfinity, go = Truck)</label>
                 <input type="text" id="seriesQual" class = "form-control" name="series" value="sc">
             </div>
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-6" id="qual_file">
                 <label for="description">File</label>
                 <input type="text" id="fileQual" class = "form-control" name="file" value="qualifying.json" readonly>
             </div>
@@ -100,12 +100,15 @@ $('#loadQualify').hide();
     $('#loadEntrants').show();
     $('#loadQualify').hide();
     $('#entrant_race_id').hide();
+    $('#entrant_file').hide();
+    $('#entrant_type').hide();
     } else if (checkedValue == "Qualify") {
     $('#loadRaces').hide();
     $('#loadEntrants').hide();
     $('#loadQualify').show();
-    $('#Qual_race_id').hide();
-
+    $('#qual_race_id').hide();
+    $('#qual_file').hide();
+    $('#qual_type').hide();
     } else {
     alert ("Nothing was chosen which shouldnt happen")
     }
