testing jquery on profile page

--- a/src/templates/nascar_admin.html
+++ b/src/templates/nascar_admin.html
@@ -43,7 +43,7 @@
     </form>
     <form id="loadEntrants" action="/nascar/load" method="post">
         <div class="form-row">
-            <div class="form-group col-md-6" id="entrants_type">
+            <div class="form-group col-md-6" id="entrant_type">
                 <label for="description">Type Parameter</label>
                 <input type="text" id="typeEntrantOther" class="form-control" name="type" value="races" readonly>
             </div>
