testing jquery on profile page

--- a/src/templates/nascar_admin.html
+++ b/src/templates/nascar_admin.html
@@ -53,7 +53,7 @@
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                     {% for race in races %}
-                    <a class="dropdown-item" href="#" value="{{ race['race_id']  }}">{{ race['race_name'} }}</a>
+                    <a class="dropdown-item" href="#">{{ race['race_name'} }}</a>
                     {% endfor %}
 
                 </div>
